# anti-plagiarism

./: .gitignore  yn
Back/: .dockerignore  Dockerfile  docker-compose.yml  index_config.json  requirements.txt
Back/app/: main.py  main_ops.py  main_search.py  ocr_result.txt  semantic_server.py
Back/app/core/: config.py  io_utils.py  logger.py  logging.py  memlog.py  runtime_cfg.py  settings_index.py
Back/app/db/: session.py
Back/app/models/: __init__.py  document.py  errors.py  index_error.py  index_task.py  schemas.py  segment.py  segment_doc.py  segment_docs.py
Back/app/repositories/: documents.py  index_errors.py  index_tasks.py  segments.py
Back/app/routers/: admin_levels.py  check_cross.py  config_runtime.py  document_upload.py  experiment.py  health.py  level5.py  levels0_4_search.py  search.py  search_segments.py  status.py  upload.py
Back/app/schemas/: level5.py
Back/app/scripts/: enqueue_test_tasks.py
Back/app/services/: docx_utils.py  index_build.py  index_native_export.py  index_search.py  minhash.py  normalizer.py  pdf_convert.py  pdf_heavy.py  search_native.py  (+3 more)
Back/cpp/: CMakeLists.txt  index_builder.cpp  json.hpp  search_core.cpp  search_core.h  text_common.h
Back/cpp/common/: search_core.cpp  search_core.h  text_common.h
Back/cpp/level5/: index_builder.cpp
Back/cpp/levels_0_4/: etl_index_builder.cpp  search_engine.cpp  search_engine.h  search_segments.cpp  search_segments.h
Back/nginx/: nginx.conf
Back/test/: ocr.py
Front/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Front/src/: App.tsx  index.css
(+59 files in other folders)
